--- a/custom_component/Tuya_BLE/manifest.json
+++ b/custom_component/Tuya_BLE/manifest.json
@@ -7,7 +7,7 @@
       "service_data_uuid": "0000a201-0000-1000-8000-00805f9b34fb"
     }
   ],
-  "codeowners": ["@PlusPlus-ua"],
+  "codeowners": ["@SupaHotMoj0"],
   "config_flow": true,
   "dependencies": ["bluetooth_adapters", "tuya"],
   "documentation": "https://www.home-assistant.io/integrations/tuya_ble",
