--- a/custom_components/tuya_ble/manifest.json
+++ b/custom_components/tuya_ble/manifest.json
@@ -10,8 +10,8 @@
   "codeowners": ["@SupaHotMoj0"],
   "config_flow": true,
   "dependencies": ["bluetooth_adapters", "tuya"],
-  "documentation": "https://www.home-assistant.io/integrations/tuya_ble",
-  "requirements": ["tuya-iot-py-sdk==0.6.6", "pycountry>23.0.0"],
+  "documentation": "https://github.com/janostrowka/tuya-ble",
+  "requirements": ["tuya-iot-py-sdk==0.6.6", "pycountry==22.3.5"],
   "iot_class": "local_push",
-  "version": "0.1.8"
+  "version": "0.2.0"
 }
