--- a/custom_components/tuya_ble/manifest.json
+++ b/custom_components/tuya_ble/manifest.json
@@ -13,5 +13,6 @@
   "documentation": "https://github.com/SupaHotMoj0/tuya-ble",
   "requirements": ["tuya-iot-py-sdk==0.6.6", "pycountry>23.0.0"],
   "iot_class": "local_push",
-  "version": "0.2.0"
+  "version": "0.2.0",
+  "issue_tracker": "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/issues"
 }
