--- a/custom_components/tuya_ble/manifest.json
+++ b/custom_components/tuya_ble/manifest.json
@@ -11,7 +11,7 @@
   "config_flow": true,
   "dependencies": ["bluetooth_adapters", "tuya"],
   "documentation": "https://github.com/SupaHotMoj0/tuya-ble",
-  "requirements": ["tuya-iot-py-sdk==0.6.6", "pycountry>23.0.0"],
+  "requirements": ["tuya-sharing==0.7.0", "pycountry>23.0.0"],
   "iot_class": "local_push",
   "version": "0.2.0",
   "issue_tracker": "https://github.com/{{cookiecutter.github_user}}/{{cookiecutter.project_name}}/issues"
